# device-sdk

./: .gitignore
.github/workflows/: esp-idf.yaml
esp_idf/spotflow/: CMakeLists.txt  Kconfig.projbuild  spotflow.c
esp_idf/spotflow/examples/Coredump/main/: Kconfig.projbuild  app_main.c  idf_component.yml
esp_idf/spotflow/examples/logs/: sdkconfig.defaults
esp_idf/spotflow/examples/logs/main/: app_main.c
esp_idf/spotflow/include/configs/: spotflow_config.h  spotflow_config_cbor.h  spotflow_config_net.h  spotflow_config_options.h  spotflow_config_persistance.h
esp_idf/spotflow/include/coredump/: spotflow_coredump.h  spotflow_coredump_cbor.h
esp_idf/spotflow/include/logging/: spotflow_log_backend.h  spotflow_log_cbor.h  spotflow_log_queue.h
esp_idf/spotflow/include/net/: spotflow_mqtt.h
esp_idf/spotflow/scripts/: patch_build_id.py
esp_idf/spotflow/src/buildid/: spotflow_build_id.c
esp_idf/spotflow/src/configs/: spotflow_config.c  spotflow_config_cbor.c  spotflow_config_net.c  spotflow_config_options.c  spotflow_config_persistance.c
esp_idf/spotflow/src/coredump/: spotflow_coredump.c  spotflow_coredump_cbor.c
esp_idf/spotflow/src/logging/: spotflow_log_queue.c
esp_idf/spotflow/src/net/: spotflow_mqtt.c
